# raizes_nordes_AW

./: .env  .env.exemplo  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: depends.py
app/infra/: logs.py  models.py  security.py
app/routers/: auth.py  estoque.py  fidelidade.py  pagamentos.py  pedidos.py  produtos.py  promocoes.py  unidades.py  users.py
app/schemas/: __init__.py  enums.py  estoque.py  fidelidade.py  pagamentos.py  pedido.py  produto.py  promocao.py  unidade.py  usuario.py
migrations/: env.py
migrations/versions/: 2a1450bbe9ca_adicionando_tabela_de_logs_para_.py  4da941ddb743_tabela_de_promocoes.py  50f1c6a91ab8_criacao_das_tabelas_inicais.py  5c52a0f1f9ef_organizando_pastas_de_schemas.py  b403b02e6b4c_nova_versao_do_banco.py
tests/: conftest.py  test_auth.py  test_estoque.py  test_fidelidade.py  test_main.py  test_pagementos.py  test_pedidos.py  test_produtos.py  test_promocoes.py  test_security.py  test_unidade.py  test_users.py
